# LLMP

./: .gitignore  .gitmodules  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUITING.md  README.md  pyproject.toml  requirements.txt  settings.ini
.streamlit/: config.toml
_notebooks/: Using loops in OutputModel.ipynb
docs/: code-block-loader.js  package-lock.json  package.json  requirements.txt  settings.ini  vercel_build.sh  vercel_requirements.txt
docs/api_reference/: api_reference.rst  conf.py  create_api_rst.py  index.rst
docs/api_reference/components/: llmp.components.base.BaseEvaluationEngine.rst  llmp.components.base.BaseHumanVerification.rst  llmp.components.base.BaseOptimizer.rst  llmp.components.evaluation.metrics.avg_accuracy.rst  llmp.components.evaluation.metrics.avg_efficiency.rst  llmp.components.evaluation.metrics.avg_token_usage.rst  llmp.components.evaluation.metrics.implicit_accuracy.rst  llmp.components.generator.concurrent.AsyncGenerator.rst  llmp.components.generator.concurrent.MultiThreadingAsyncGenerator.rst  llmp.components.generator.consensus.MajorVoteGenerator.rst  llmp.components.generator.verification.get_majority_vote.rst  llmp.components.instruction.utils.generate_instruction_from_models.rst  llmp.components.instruction.utils.instruction_from_working_out.rst  llmp.components.job_factory.ExampleJobCreator.rst  llmp.components.job_factory.JobCreator.rst  llmp.components.job_factory.TemplateJobCreator.rst  llmp.components.optimizer.instructions.InstructionOptimizer.rst  llmp.components.settings.global_settings.GlobalSettings.rst  llmp.components.settings.program_settings.PromptType.rst
docs/api_reference/components.generator/: llmp.components.generator.concurrent.SequentialAsyncGenerator2.rst  llmp.components.generator.verification.remove_reasoning.rst
docs/api_reference/data_model/: llmp.data_model.job_record.get_record_by_input.rst
docs/api_reference/integration/: llmp.integration.example_selector.ExampleManagerSelector.rst
docs/api_reference/services/: llmp.services.program.Program.rst
docs/api_reference/templates/: COPYRIGHT.txt  enum.rst  function.rst  pydantic.rst  redirects.html
docs/api_reference/tests/: llmp.tests.resources.fixtures.job_id.rst  llmp.tests.resources.fixtures.temp_job_id.rst  llmp.tests.test_basic_fn.test_tuple_list_unpacking.rst  llmp.tests.test_example_generator.test_fill_examples.rst  llmp.tests.test_job_manager.test_update_job.rst  llmp.tests.test_job_record.input_example.rst  llmp.tests.test_job_storing_logging.test_event_log_adding.rst  llmp.tests.test_job_storing_logging.test_job_event_log_loading.rst
docs/api_reference/types/: llmp.types.EventType.rst  llmp.types.MajorVoteType.rst  llmp.types.TestSetMode.rst
docs/api_reference/utils/: llmp.utils.encoder.JSONEncoder.rst  llmp.utils.encoder.dumps_encoder.rst  llmp.utils.eval.f1_score.rst  llmp.utils.eval.fuzzy_match.rst  llmp.utils.helper.dotdict.rst  (+5 more)
docs/docs/: .readthedocs.yaml  conf.py  intro.mdx
docs/llmp-docs/: .gitignore  .local_build.sh  docusaurus.config.js  package-lock.json  package.json  settings.ini  vercel_build.sh  vercel_requirements.txt
docs/notebooks/: Create llmp_job.ipynb  Methods of defining Input&Output Model.ipynb  Using loops in OutputModel.ipynb
docs/source/: index.rst
libs/llmp/: .gitignore  README.md  pyproject.toml  test_file.py  types.py
libs/llmp-agent/: playground.ipynb  playground_2.ipynb  playground_tool_agent.ipynb  pyproject.toml
libs/llmp-agent/experimental/: agent.py
libs/llmp-agent/llmp_agent/: base_tool.py  convert.py  tool_agent.py
libs/llmp-agent/scripts/: convert.py  function_calling.py  multi_agent.py  tool_agent.py
libs/llmp-monitor/: app.py  pyproject.toml
libs/llmp-monitor/scripts/: components.py  monitor_sidebar.py  utils.py
libs/llmp/llmp/: types.py  (+2 more)
src/llmp/: types.py
(+500 files in other folders)
