[tool.poetry]
name = "pyllmp"
version = "0.0.14"
description = "large language model Programming - Type safe structured generation"
license = "MIT"
authors = ["elokow <lukas.kowejsza@gmail.com>"]
readme = "README.md"
repository = "https://github.com/elokus/LLMP"
packages = [
    { include = "llmp", from = "libs/llmp" },
    { include = "llmp-monitor", from = "libs" },
    { include = "llmp-agent", from = "libs" }
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
pydantic = ">=1,<3"
colorama = "0.4.6"
pyyaml = ">=5.3,<7.0"
python-dotenv =">=1"
tiktoken = ">=0.3,<1.0"
jsonlines ="4.0.0"
uuid = "^1.30"
tqdm = "^4.62.3"
structgenie = ">=0.1.21"
jupyter = "^1.0.0"

[tools.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.2"
pytest-mock = "^3.6.1"
structgenie = {path = "libs/StructGenie", develop = false}

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0"
docutils = "<0.17"
sphinx-autodoc-typehints = "^1.12"
autodoc_pydantic = "==1.8.0"
myst_parser = "*"
nbsphinx = "==0.8.9"
sphinx-autobuild = "==2021.3.14"
sphinx_rtd_theme = "==1.0.0"
sphinx-typlog-theme = "==0.8.0"
sphinx-panels = "*"
myst_nb = "*"
sphinx_copybutton = "*"
toml = "*"

[tool.poetry.group.llmp-monitor.dependencies]
streamlit = "1.29.0"
jsonlines ="4.0.0"
uuid = "^1.30"
pandas = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
