[tool.poetry]
name = "pyllmp-agent"
version = "0.0.1"
description = "large language model Programming - Type safe structured generation"
license = "MIT"
authors = ["elokow <lukas.kowejsza@gmail.com>"]
readme = "README.md"
repository = "https://github.com/elokus/LLMP"

[tool.poetry.group.docs]
optional = true

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
pydantic = ">=1,<3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"